# gutil

./: BUILD.bazel  README.md  WORKSPACE.bazel  gutil_deps.bzl  install_dependencies.sh  pins_infra_deps.bzl
.github/workflows/: ci.yml
dvaas/: BUILD.bazel  README.md  arriba_test_vector_validation.cc  arriba_test_vector_validation.h  dataplane_validation.cc  dataplane_validation.h  mirror_testbed_config.cc  mirror_testbed_config.h  output_writer.h  packet_injection.cc  packet_injection.h  port_id_map.cc  port_id_map.h  port_id_map_test.cc  switch_api.h  test_run_validation.cc  test_run_validation.h  test_run_validation_test_runner.cc  test_vector.cc  test_vector.h  test_vector.proto  test_vector_stats.cc  test_vector_stats.h  test_vector_stats_test.cc  test_vector_test.cc  traffic_generator.cc  traffic_generator.h  user_provided_packet_test_vector.h  user_provided_packet_test_vector_test.cc  validation_result.cc  validation_result.h
gutil/: BUILD.bazel  proto_matchers_test.cc  proto_ordering.h  proto_test.cc  test_artifact_writer.h  timer.h  version.h
lib/: BUILD.bazel  basic_switch.h  ixia_helper.cc  ixia_helper.h  pins_control_device.cc  pins_control_device.h
lib/basic_traffic/: BUILD.bazel  basic_p4rt_util.h  basic_traffic.cc  basic_traffic.h  basic_traffic_test.cc
lib/gnmi/: BUILD.bazel  gnmi_helper.cc  gnmi_helper.h  gnmi_helper_test.cc
lib/gnoi/: gnoi_helper.h
lib/p4rt/: BUILD.bazel  p4rt_port.cc  p4rt_port.h  p4rt_port_test.cc  p4rt_programming_context.h  packet_listener.cc  packet_listener.h
lib/utils/: BUILD.bazel  generic_testbed_utils.cc  generic_testbed_utils.h  generic_testbed_utils_test.cc  json_utils.h  json_utils_test.cc
lib/validator/: BUILD.bazel  common_backend.h  pins_backend.h  validator.h  validator_backend.h  validator_lib.cc  validator_lib.h  validator_lib_test.cc
ondatra/: binding_deps.bzl
ondatra/binding/: BUILD.bazel  binding_backend.go  gpins_backend.go  gpins_binding.go
ondatra/pinstesthelper/: BUILD.bazel  config_restorer.go  gnmi.go  gnoi.go  p4rt.go  pinstesthelper.go  platform_components.go  port_management.go  results.go
ondatra/thinkit/: BUILD.bazel  ondatra_generic_testbed.h  ondatra_generic_testbed_fixture.cc  ondatra_generic_testbed_fixture.h  ondatra_generic_testbed_fixture_test.cc  ondatra_mirror_testbed.h  ondatra_mirror_testbed_fixture.cc  ondatra_mirror_testbed_fixture.h  ondatra_params.cc  ondatra_params.h  thinkit.cc  thinkit.go
p4_fuzzer/: BUILD.bazel  constraints.cc  constraints.h  constraints_test.cc  fuzz_util.cc  fuzz_util.h  fuzz_util_test.cc  fuzzer_config.h  fuzzer_config_test.cc  mutation.cc  switch_state.cc  switch_state.h  switch_state_test.cc  test_utils.cc  test_utils.h
p4_fuzzer/p4_programs/: constraints_equals.p4
p4_pdpi/: BUILD.bazel  built_ins.cc  built_ins.h  built_ins_test.cc  entity_keys.cc  entity_keys.h  entity_keys_test.cc  ir.cc  ir.h  ir_properties.h  ir_properties_test.cc  ir_tools.h  names.h  p4_runtime_client_interceptor.cc  p4_runtime_client_interceptor_test.cc  p4_runtime_matchers.h  p4_runtime_session.cc  p4_runtime_session.h  p4_runtime_session_extras.cc  p4_runtime_session_extras.h  p4_runtime_session_extras_test.cc  p4_runtime_session_mocking.cc  p4_runtime_session_mocking.h  p4_runtime_session_test.cc  p4info_union_lib.cc  pd.cc  pd.h  pdgenlib.h  reference_annotations.cc  reference_annotations.h  reference_annotations_test.cc  references.h  sequencing.cc  sequencing.h  sequencing_util.h  translation_options.h
p4_pdpi/packetlib/: bit_widths.h  packetlib.cc  packetlib.h  packetlib.proto  packetlib_matchers.h  packetlib_matchers_test.cc  packetlib_test_runner.cc  packetlib_unit_test.cc
p4_pdpi/string_encodings/: byte_string.h  readable_byte_string.h
p4_pdpi/testing/: sequencing_test_runner.cc
p4_pdpi/utils/: ir.cc  ir.h
p4_symbolic/: BUILD.bazel  test_util.h  z3_util.cc  z3_util.h
p4_symbolic/bmv2/: BUILD.bazel  bmv2.proto  test.bzl  test.cc  test_sdiff.py
p4_symbolic/ir/: BUILD.bazel  cfg.cc  cfg.h  ir.cc  ir.h  ir.proto  parser.cc  parser.h
p4_symbolic/packet_synthesizer/: BUILD.bazel  coverage_goal.proto  criteria_generator.cc  criteria_generator.h  packet_synthesis_criteria.cc  packet_synthesis_criteria.h  packet_synthesis_criteria.proto  packet_synthesizer.cc  packet_synthesizer.h  packet_synthesizer.proto  util.cc  util.h
p4_symbolic/sai/: BUILD.bazel  criteria_generator_test.cc  packet_synthesizer_test.cc  sai.cc  sai.h  sai_coverage_goals.h  sai_test.cc
p4_symbolic/symbolic/: BUILD.bazel  conditional.cc  conditional.h  context.cc  context.h  control.cc  control.h  deparser.h  deparser_test.cc  guarded_map.cc  guarded_map.h  operators.cc  operators.h  parser.cc  parser.h  parser_test.cc  symbolic.cc  symbolic.h  symbolic_table_entry.cc  symbolic_table_entry.h  symbolic_table_entry_test.cc  table.cc  table.h  test.bzl  util.cc  util.h  util_test.cc  v1model.cc  v1model.h  v1model_intrinsic.h  values.cc  values.h
p4_symbolic/testdata/: BUILD.bazel
p4_symbolic/tests/: sai_p4_integration_test.cc  symbolic_table_entries_test.cc
p4rt_app/: BUILD.bazel  bluze.textproto  p4rt.cc
p4rt_app/event_monitoring/: BUILD.bazel  app_state_db_port_table_event.h  app_state_db_send_to_ingress_port_table_event.cc  app_state_db_send_to_ingress_port_table_event.h  app_state_db_send_to_ingress_port_table_event_test.cc  config_db_port_table_event.h  config_db_port_table_event_test.cc  config_db_queue_table_event.cc  config_db_queue_table_event.h  (+16 more)
tests/: BUILD.bazel  thinkit_gnmi_interface_tests.cc  thinkit_gnmi_interface_tests.h  thinkit_gnmi_interface_util.cc  thinkit_gnmi_interface_util.h  thinkit_gnmi_interface_util_tests.cc  thinkit_gnmi_subscribe_tests.h  thinkit_sanity_tests.cc  thinkit_sanity_tests.h  thinkit_util.h
tests/ondatra/thinkit/: BUILD.bazel  arbitration_test.cc  arriba_test.cc  configure_mirror_testbed_test.cc  random_blackbox_events_test.cc
thinkit/: BUILD.bazel  control_device.h  generic_testbed.h  generic_testbed_fixture.h  mirror_testbed_fixture.h  mock_control_device.h  mock_generic_testbed.h  packet_generation_finalizer.h
(+389 files in other folders)
