# ThinKit tests that run on Ondatra.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_test(
    name = "random_blackbox_events_test",
    timeout = "long",
    srcs = ["random_blackbox_events_test.cc"],
    linkstatic = 1,
    tags = [
        "exclusive",
        "external",
        "guitar",
        "manual",
        "notap",
    ],
    deps = [
        "//ondatra/thinkit:ondatra_params",
        "//tests/integration/system:random_blackbox_events_tests",
        "//thinkit:generic_testbed_fixture",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "arbitration_test",
    timeout = "long",
    srcs = [
        "arbitration_test.cc",
    ],
    linkstatic = 1,
    tags = [
        "exclusive",
        "external",
        "guitar",
        "manual",
        "notap",
    ],
    deps = [
        "//gutil:testing",
        "//ondatra/thinkit:ondatra_params",
        "//p4_pdpi:p4_runtime_session",
        "//tests/forwarding:arbitration_test",
        "//thinkit:mirror_testbed",
        "//thinkit:mirror_testbed_fixture",
        "//util/gtl:value_or_die",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/flags:flag",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "configure_mirror_testbed_test",
    timeout = "long",
    srcs = [
        "configure_mirror_testbed_test.cc",
    ],
    linkstatic = 1,
    tags = [
        "exclusive",
        "external",
        "guitar",
        "manual",
        "notap",
    ],
    deps = [
        "//gutil:testing",
        "//ondatra/thinkit:ondatra_params",
        "//tests/forwarding:configure_mirror_testbed_test",
        "//thinkit:mirror_testbed_fixture",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "arriba_test",
    timeout = "long",
    srcs = ["arriba_test.cc"],
    linkstatic = 1,
    tags = [
        "exclusive",
        "external",
        "guitar",
        "manual",
        "notap",
    ],
    deps = [
        "//dvaas:test_vector_cc_proto",
        "//gutil:testing",
        "//ondatra/thinkit:ondatra_params",
        "//tests/forwarding:arriba_test",
        "//thinkit:mirror_testbed_fixture",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)
